tui/tests/snapshots/view_snapshots__help_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&help, Theme::Dark, 100, 24)"
---

  › Summarize the release plan.
    ✓  Agent action · completed
              ╭ Keyboard guide ──────────────────────────────────────────────────────╮
              │                                                                      │
              │    Enter send   Ctrl+J new line   Ctrl+N new Session                 │
              │    Ctrl+S open Sessions   Ctrl+P open commands                       │
              │    Ctrl+R open prompt history   Ctrl+G edit externally               │
              │    Ctrl+U/K kill to line edge   Ctrl+Y yank killed text              │
              │    Esc close guide   Ctrl+Q ask to quit                              │
              │                                                                      │
              │  Durable truth comes from the local Garive Host.                     │
              │  No function keys are required. Color and mouse are optional.        │
              │  Copy uses terminal OSC 52 support; otherwise select terminal text   │
              │  manually.                                                           │
              │                                                                      │
              ╰──────────────────────────────────────────────────────────────────────╯




• Working…
› Ask a follow-up…
