tui/tests/snapshots/view_snapshots__inspector_overlay_light_120x18.snap
---
source: tui/tests/view_snapshots.rs
expression: "inspector_frame(theme, 120)"
---

            › Summarize the release plan.
              ✓  Agent action · completed
            ## Release plan

              • Verify the Runtime
              • Ship with evidence

              cargo test passes.



             Inspector · Activity ──────────────────────────────────────────────────────────────────────────
            › ✓ Agent action · completed
            ↑↓ select · Enter jump · Esc close
            • Working…
            › Ask a follow-up…
              Agent · Session 1
