tui/tests/snapshots/view_snapshots__inspector_wide_light_120x18.snap
---
source: tui/tests/view_snapshots.rs
expression: "inspector_frame(theme, 120)"
---
Session 1  ·  Agent                                                       Agent running ╭ Inspector · Activity ────────╮
                                                                                        │ › ✓ Agent action · completed │
  › Summarize the release plan.                                                         │                              │
    ✓  Agent action · completed                                                         │                              │
  ◆ Garive                                                                              │                              │
    ## Release plan                                                                     │                              │
    • Verify the Runtime                                                                │                              │
    • Ship with evidence                                                                │                              │
    cargo test passes.                                                                  │                              │
                                                                                        │                              │
                                                                                        │                              │
                                                                                        │                              │
                                                                                        │                              │
                                                                                        │                              │
╭─────────────────────────────────────────────────────────────────────────────────────╮ │                              │
│ Ask a follow-up…                                                                    │ │                              │
╰─────────────────────────────────────────────────────────────────────────────────────╯ │ Enter jump · Esc close       │
  Esc cancel run                                                                        ╰──────────────────────────────╯
